examples/resolver/checker/pass/bitwise_and_shift_ops.axo
const band = 12 & 3
const bor = 12 | 3
const shl = 12 << 1
const shr = 12 >> 1
print(band)
print(bor)
print(shl)
print(shr)
