examples/resolver/checker/fail/invalid_addition_types.axo
const bad = true + 1
print(bad)
